updated the docker hub file